# wrg-devguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  tool_spec.json
.claude/skills/wrg-devguard/: SKILL.md
.cursor/rules/: wrg-devguard.mdc
.github/workflows/: ci.yml  codeql.yml  marketplace-release.yml  publish.yml
.wrg/: policy.json  policy.strict.json
docs/: dogfood_v0_3_0_cli.md  drift_corpus_acquisition.md  v0_3_0-item-3-investigation.md  v0_3_0_plan.md
schemas/: log_scan_result.schema.json
scripts/: json_to_sarif.py
src/wrg_devguard/: __init__.py  cli.py  common.py  pii.py  pii_names.py  policy.py  scan_logs.py  secrets.py
src/wrg_devguard/adapters/log_analysis/: __init__.py  _normalize.py  cc_endpoint.py  cd_deployment.py  ci_github_actions.py
tests/: conftest.py  test_cli.py  test_pii_names_patterns.py  test_pii_patterns.py  test_scan_logs.py  test_scanner_helpers.py
tests/adapters/log_analysis/: test_cc_endpoint.py  test_cd_deployment.py  test_ci_github_actions.py  test_normalize.py
tests/fixtures/: pii_sample_log.txt
tests/fixtures/logs/: cc_endpoint_sample.json  deploy_systemd.txt  github_actions_clean.txt  mixed_edge.txt
tests/marketplace/: test_action_locally.py
tests/marketplace/fixtures/: leaky.txt
tests/schemas/: test_log_scan_result_schema.py
tests/schemas/fixtures/: clean.json  mixed.json
