[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wrg-devguard"
version = "0.1.1"
description = "Developer-first AI safety checks: prompt-policy lint + secret scanning. Zero-dep CLI + GitHub Action + Claude Skill + Cursor Rule."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yakuphan Yucel" },
]
requires-python = ">=3.11"
keywords = [
    "security",
    "secret-scanning",
    "policy-lint",
    "ai-safety",
    "prompt-security",
    "devsecops",
    "pre-commit",
    "github-action",
    "claude-skill",
    "cursor-rule",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=8",
    "jsonschema>=4.20",
]

[project.urls]
Homepage = "https://github.com/yakuphanycl/wrg-devguard"
Repository = "https://github.com/yakuphanycl/wrg-devguard"
Issues = "https://github.com/yakuphanycl/wrg-devguard/issues"
Changelog = "https://github.com/yakuphanycl/wrg-devguard/releases"

[project.scripts]
wrg-devguard = "wrg_devguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wrg_devguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: isolated unit test (no network, no real services)",
    "integration: exercises a real external service or SDK",
]
